--- a/media.css
+++ b/media.css
@@ -17,3 +17,13 @@
     padding-right: 0;
   }
 }
+
+@media only screen and (max-width: 352px) {
+  .navbar {
+    padding-left: 0;
+    padding-right: 0;
+  }
+  #brand {
+    font-size: 20px;
+  }
+}
