--- a/style.css
+++ b/style.css
@@ -1,7 +1,10 @@
+@import url("https://fonts.googleapis.com/css2?family=Changa&family=Slabo+27px&family=Zen+Dots&display=swap");
+
 * {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+  font-family: "Changa", sans-serif;
 }
 
 /* #A1677A this is the middle color she chose or somthing close to what she picked */
@@ -47,4 +50,27 @@
 .navbar-toggler {
   background-color: white;
   box-shadow: -0.1px 1px 1px 1px #d586a0;
+}
+
+.hero {
+  background-image: url(".//images/heroImg.jpeg") !important;
+  height: 300px;
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+.heroMG {
+  display: flexbox;
+  justify-content: center;
+  align-content: center;
+}
+
+.heroQ {
+  padding-top: 40px;
+}
+
+.heroQ h2 {
+  color: white;
+  text-shadow: 2px 2px 2px black;
+  text-align: center;
 }
