--- a/media.css
+++ b/media.css
@@ -1,3 +1,9 @@
+@media only screen and (max-width: 2886px) {
+  .hero {
+    height: 500px;
+  }
+}
+
 @media only screen and (max-width: 414px) {
   .navbar {
     padding-left: 0;
