--- a/media.css
+++ b/media.css
@@ -28,7 +28,25 @@
   #insta {
     font-size: 18px;
   }
+  .content p {
+    text-align: left;
+  }
+  .recentClients {
+    grid-template-columns: 350px;
+    grid-template-rows: repeat(5, 350px);
+  }
+
+  .aboutImg img {
+    height: 250px;
+    width: 250px;
+  }
+
+  .ClientCon:hover {
+    transform: scale(0.2);
+    z-index: 1;
+  }
 }
+
 @media only screen and (max-width: 390px) {
   .navbar {
     padding-left: 0;
