--- a/style.css
+++ b/style.css
@@ -11,11 +11,11 @@
 /* #78557B this is the last color she chose or something close to what she picked */
 /* entire navbar */
 body {
-  background-image: linear-gradient(#b963809b, white);
+  background-image: linear-gradient(#d67897, white);
 }
 
 .navbar {
-  background-color: #d586a0 !important;
+  background-color: #d67897 !important;
   padding-left: 25px;
   padding-right: 25px;
 }
@@ -25,7 +25,12 @@ body {
   color: white !important;
   font-size: 25px;
 }
-
+#brand:hover {
+  color: #78557b !important;
+}
+#navLinks a:hover {
+  color: #78557b !important;
+}
 #brandImg {
   vertical-align: middle;
   height: 55px;
@@ -58,17 +63,17 @@ body {
 }
 
 .hero {
-  background-image: url(".//images/heroImg.jpeg") !important;
+  background-image: url(".//images/transparentLashes.png") !important;
   height: 300px;
+  border-bottom: solid rgb(255, 252, 252) 1px;
+  border-top: solid rgb(255, 252, 252) 1px;
   background-position: center;
   background-size: cover;
-  background-repeat: no-repeat;
 }
 .heroMG {
   display: flexbox;
   justify-content: center;
   align-content: center;
-
   padding-top: 40px;
 }
 
@@ -77,8 +82,9 @@ body {
 }
 
 .heroQ h2 {
-  color: white;
-  text-shadow: 2px 2px 2px black;
+  color: #78557b;
+  text-shadow: 1px 1px 2px #78557b;
+  font-size: 45px;
   text-align: center;
 }
 
@@ -104,13 +110,19 @@ body {
 .content h2 {
   text-align: center;
   font-size: 45px;
-  border-bottom: solid 4px black;
+  border-bottom: solid 4px rgb(255, 255, 255);
+  color: white;
+  /* this text shadow is good for headings */
+  text-shadow: 2px 5px 20px rgba(0, 0, 0, 0.787);
 }
 
 .content p {
   font-size: 18px;
   line-height: 1.5 !important;
   margin-top: 40px;
+  /* this is good for text */
+  text-shadow: 1px 1px 10px rgb(0, 0, 0);
+  color: white;
 }
 
 /* start of recent clients syling */
@@ -121,8 +133,10 @@ body {
 .headerClients h2 {
   text-align: center;
   margin-bottom: 80px;
-  border-bottom: solid 4px black;
+  border-bottom: solid 4px rgb(255, 255, 255);
+  color: white;
   font-size: 45px;
+  text-shadow: 2px 5px 20px rgba(0, 0, 0, 0.787);
 }
 .recentClients {
   display: grid;
@@ -137,7 +151,7 @@ body {
   background-repeat: no-repeat;
   background-position: center;
   box-shadow: 0 0 20px 2px rgba(0, 0, 0, 0.1);
-  transition: 1s;
+  transition: 1.2s;
 }
 .clientCon:hover {
   transform: scale(1.3);
@@ -178,6 +192,7 @@ footer {
   font-size: 18px;
   color: white;
   text-shadow: 2px 1px 1px black;
+  text-shadow: 1px 1px 10px rgb(0, 0, 0);
 }
 
 .fCon a {
