--- a/media.css
+++ b/media.css
@@ -20,6 +20,7 @@
     gap: 200px;
     margin-top: 150px;
     margin-bottom: 60px;
+    margin-left: 20px;
   }
   .footer {
     padding-left: 0 !important;
@@ -67,6 +68,7 @@
   }
   .about1 {
     grid-template-columns: 340px;
+    margin-left: 10px;
   }
   .recentClients {
     grid-template-columns: 300px;
