--- a/media.css
+++ b/media.css
@@ -1,10 +1,76 @@
+/* All the media is only up to date witht he landing page */
+
 @media only screen and (max-width: 2886px) {
   .hero {
     height: 500px;
   }
 }
 
-/* 414 is the most updated version on media */
+@media only screen and (max-width: 1280px) {
+  .about1 {
+    gap: 5px;
+    grid-template-columns: 700px 300px;
+  }
+  .aboutImg img {
+    height: 250px;
+    width: 250px;
+  }
+  .recentClients {
+    grid-template-columns: repeat(3, 350px);
+    grid-template-rows: repeat(2, 300px);
+  }
+}
+
+@media only screen and (max-width: 1024px) {
+  .about1 {
+    gap: 5px;
+    grid-template-columns: 650px 300px;
+  }
+
+  .recentClients {
+    grid-template-columns: repeat(3, 250px);
+    grid-template-rows: repeat(2, 300px);
+  }
+}
+
+@media only screen and (max-width: 912px) {
+  .about1 {
+    grid-template-columns: 450px 300px;
+    grid-template-rows: 800px;
+  }
+}
+
+@media only screen and (max-width: 540px) {
+  .about1 {
+    gap: 5px;
+    grid-template-columns: 400px;
+    grid-template-rows: 300px 750px;
+  }
+  .content {
+    grid-row: 2/3;
+  }
+
+  .recentClients {
+    grid-template-columns: repeat(2, 205px);
+    grid-template-rows: repeat(3, 300px);
+  }
+
+  .hTBHeader {
+    margin-bottom: 50px;
+    border-bottom: solid 4px rgb(255, 255, 255);
+  }
+  .hTBInstructions p {
+    text-align: left;
+    margin-bottom: 40px;
+  }
+  .fCon h6 {
+    font-size: 13px;
+  }
+  .fCon a {
+    font-size: 15px;
+  }
+}
+
 @media only screen and (max-width: 414px) {
   .hero {
     height: 150px;
@@ -38,7 +104,7 @@
   }
   .recentClients {
     grid-template-columns: 320px;
-    grid-template-rows: repeat(5, 350px);
+    grid-template-rows: repeat(6, 350px);
   }
 
   .aboutImg img {
