--- a/media.css
+++ b/media.css
@@ -135,14 +135,15 @@
     padding-right: 0;
   }
   .about1 {
-    grid-template-columns: 340px;
+    grid-template-columns: 300px;
+    grid-template-rows: 300px 850px;
   }
   .recentClients {
     grid-template-columns: 300px;
   }
 }
 
-@media only screen and (max-width: 352px) {
+/* @media only screen and (max-width: 352px) {
   .navbar {
     padding-left: 0;
     padding-right: 0;
@@ -150,4 +151,4 @@
   #brand {
     font-size: 20px !important;
   }
-}
+} */
