--- a/media.css
+++ b/media.css
@@ -143,7 +143,7 @@
   }
 }
 
-/* @media only screen and (max-width: 352px) {
+@media only screen and (max-width: 352px) {
   .navbar {
     padding-left: 0;
     padding-right: 0;
@@ -151,4 +151,4 @@
   #brand {
     font-size: 20px !important;
   }
-} */
+}
