--- a/media.css
+++ b/media.css
@@ -8,35 +8,38 @@
 
 @media only screen and (max-width: 1280px) {
   .about1 {
-    gap: 5px;
-    grid-template-columns: 700px 300px;
+    grid-template-columns: 550px 250px;
   }
   .aboutImg img {
-    height: 250px;
-    width: 250px;
+    height: 210px;
+    width: 210px;
   }
+
   .recentClients {
-    grid-template-columns: repeat(3, 350px);
-    grid-template-rows: repeat(2, 300px);
+    grid-template-columns: repeat(3, 250px);
+    grid-template-rows: repeat(2, 250px);
   }
 }
 
 @media only screen and (max-width: 1024px) {
   .about1 {
-    gap: 5px;
+    gap: 10px;
     grid-template-columns: 650px 300px;
+  }
+  .aboutImg {
+    border-left: none;
   }
 
   .recentClients {
-    grid-template-columns: repeat(3, 250px);
-    grid-template-rows: repeat(2, 300px);
+    grid-template-columns: repeat(3, 220px);
+    grid-template-rows: repeat(2, 220px);
   }
 }
 
 @media only screen and (max-width: 912px) {
   .about1 {
-    grid-template-columns: 450px 300px;
-    grid-template-rows: 800px;
+    grid-template-rows: 500px;
+    grid-template-columns: 420px 230px;
   }
 }
 
@@ -44,7 +47,7 @@
   .about1 {
     gap: 5px;
     grid-template-columns: 400px;
-    grid-template-rows: 300px 750px;
+    grid-template-rows: 420px 250px;
   }
   .content {
     grid-row: 2/3;
@@ -52,9 +55,16 @@
 
   .recentClients {
     grid-template-columns: repeat(2, 205px);
-    grid-template-rows: repeat(3, 300px);
+    grid-template-rows: repeat(3, 250px);
   }
-
+  .aboutImg {
+    grid-row: 2/2;
+    grid-column: 1/2;
+  }
+  .content {
+    grid-row: 1/1;
+    grid-column: 1/1;
+  }
   .hTBHeader {
     margin-bottom: 50px;
     border-bottom: solid 4px rgb(255, 255, 255);
@@ -81,13 +91,13 @@
   }
   .about1 {
     grid-template-columns: 360px;
+    grid-template-rows: 480px 250px;
     padding-top: 30px;
     text-align: center;
-    gap: 200px;
+
     margin-top: 150px;
-    margin-bottom: 60px;
-    /* margin-left: 20px; */
-    gap: 0;
+    margin-bottom: 120px;
+    gap: 40px;
     margin-top: 20px;
   }
   .footer {
@@ -106,13 +116,21 @@
   }
   .recentClients {
     grid-template-columns: 320px;
-    grid-template-rows: repeat(6, 350px);
+    grid-template-rows: repeat(6, 250px);
   }
 
   .aboutImg img {
-    height: 250px;
-    width: 250px;
+    height: 210px;
+    width: 220px;
   }
+  /* .aboutImg {
+    grid-row: 2/2;
+    grid-column: 1/2;
+  }
+  .content {
+    grid-row: 1/1;
+    grid-column: 1/1;
+  } */
 
   .fCon h6 {
     font-size: 13px;
@@ -136,10 +154,12 @@
   }
   .about1 {
     grid-template-columns: 300px;
-    grid-template-rows: 300px 850px;
+
+    grid-template-rows: 540px 250px;
   }
   .recentClients {
-    grid-template-columns: 300px;
+    grid-template-columns: 250px;
+    grid-template-rows: repeat(6, 220);
   }
 }
 
@@ -150,5 +170,32 @@
   }
   #brand {
     font-size: 20px !important;
+  }
+}
+
+@media only screen and (max-width: 280px) {
+  /* #brandImg {
+    padding-left: 0 !important;
+  } */
+  .navbar-toggler {
+    padding: 0 !important;
+  }
+  .clientsMain {
+    margin-top: 50px;
+  }
+
+  .recentClients {
+    grid-template-columns: 190px;
+    grid-template-rows: repeat(6, 180px);
+  }
+
+  .about1 {
+    grid-template-columns: 190px;
+    grid-template-rows: 800px 200px;
+    gap: 0;
+  }
+  .aboutImg img {
+    height: 150px;
+    width: 150px;
   }
 }
