--- a/media.css
+++ b/media.css
@@ -133,10 +133,10 @@
   } */
 
   .fCon h6 {
-    font-size: 13px;
+    font-size: 10px;
   }
   .fCon a {
-    font-size: 15px;
+    font-size: 9px;
   }
 }
 
@@ -170,6 +170,11 @@
   }
   #brand {
     font-size: 20px !important;
+  }
+}
+@media only screen and (max-width: 319px) {
+  #brandImg {
+    padding-left: 5px;
   }
 }
 
