--- a/media.css
+++ b/media.css
@@ -174,7 +174,7 @@
 }
 @media only screen and (max-width: 319px) {
   #brandImg {
-    padding-left: 5px;
+    padding-left: 0 !important;
   }
 }
 
