--- a/media.css
+++ b/media.css
@@ -41,6 +41,9 @@ p {
   }
 }
 
+@media only screen and (max-width: 1280px) {
+}
+
 @media only screen and (max-width: 1024px) {
   .about1 {
     gap: 10px;
@@ -115,6 +118,10 @@ p {
   .policies {
     grid-template-columns: repeat(1, 400px) !important;
     gap: 80px !important;
+  }
+
+  .calCon {
+    grid-template-columns: 400px;
   }
 }
 
@@ -205,6 +212,10 @@ p {
 
   .alertCon {
     grid-template-columns: 320px;
+  }
+
+  .calCon {
+    grid-template-columns: 360px;
   }
 }
 @media only screen and (max-width: 412px) {
@@ -300,6 +311,10 @@ p {
   /* .policies {
     gap: 10px !important;
   } */
+
+  .calCon {
+    grid-template-columns: 300px;
+  }
 }
 
 @media only screen and (max-width: 352px) {
