--- a/media.css
+++ b/media.css
@@ -140,6 +140,12 @@ p {
     grid-template-rows: auto !important;
     gap: 0 !important;
   }
+  .fCon h6 {
+    font-size: 10px;
+  }
+  .fCon a {
+    font-size: 9px;
+  }
 }
 
 @media only screen and (max-width: 414px) {
@@ -223,8 +229,9 @@ p {
   .policies {
     grid-template-columns: repeat(1, 320px) !important;
     gap: 10px !important;
-    grid-template-rows: repeat(5, 380px) !important;
+    /* grid-template-rows: repeat(5, 380px) !important; */
     /* gap: 140px !important; */
+    grid-template-rows: auto;
   }
 
   .alertCon {
@@ -233,6 +240,7 @@ p {
 
   .calCon {
     grid-template-columns: 360px;
+    grid-template-rows: auto !important;
   }
 }
 @media only screen and (max-width: 412px) {
@@ -330,7 +338,7 @@ p {
   } */
 
   .calCon {
-    grid-template-columns: 250px;
+    grid-template-columns: 325px;
   }
 }
 
