--- a/policies.css
+++ b/policies.css
@@ -1,10 +1,10 @@
 .policies {
   display: grid;
   grid-template-columns: repeat(1, 700px);
-  grid-template-rows: repeat(8, 500px);
+  grid-template-rows: auto;
   margin-top: 80px;
   margin-bottom: 80px;
-  gap: 30px;
+  gap: 40px;
   justify-content: center;
   align-items: center;
 }
@@ -14,6 +14,8 @@
   /* text-shadow: 2px 5px 20px rgba(0, 0, 0, 0.787); */
   text-align: center;
   font-family: "Caveat", cursive;
+  font-size: 45px;
+  margin-bottom: 40px;
 }
 
 .L h3 {
@@ -39,6 +41,7 @@
 .L {
   border-bottom: solid rgb(255, 255, 255) 2px;
   border-left: solid rgb(255, 255, 255) 2px;
+  padding-bottom: 20px;
 }
 
 .disclaimer h1 {
