--- a/style.css
+++ b/style.css
@@ -377,6 +377,8 @@ footer {
 .alertCon {
   display: grid;
   grid-template-columns: 400px;
+  grid-template-rows: 200px 100px;
+  gap: 20px;
   justify-content: center;
   margin-top: 40px;
   margin-bottom: 80px;
@@ -424,3 +426,89 @@ footer {
   padding: 1.5px 12px;
   border-radius: 5px;
 }
+
+.bookNowHolder {
+  display: grid;
+  grid-template-columns: 350px;
+  grid-template-rows: auto;
+  justify-content: center;
+  text-align: center;
+  margin-bottom: 40px;
+}
+
+/* .btnholder {
+  padding-bottom: 30px;
+  padding-top: 30px;
+} */
+.btnholder {
+  padding-top: 40px;
+  padding-bottom: 40px;
+}
+
+.btnholder a {
+  color: white;
+  background-color: hsl(335deg 100% 78%);
+  padding: 20px 20px;
+  border-radius: 8px;
+  text-decoration: none;
+}
+.servicesCon {
+  display: grid;
+  grid-template-columns: 400px 400px;
+  grid-template-rows: 200px;
+  justify-content: center;
+  gap: 10px;
+}
+
+.contentser ul li {
+  text-align: center;
+  list-style: none;
+  font-family: "Courier Prime", monospace;
+}
+
+.contactConM {
+  display: grid;
+  grid-template-columns: 300px;
+  justify-content: center;
+}
+
+.Contact {
+  text-align: center;
+}
+.Contact a {
+  text-decoration: none;
+  color: black;
+}
+
+#mail {
+  color: hsl(335deg 100% 78%);
+}
+
+.locations {
+  display: none;
+  justify-content: space-evenly;
+}
+
+.locB {
+  background-color: hsl(335deg 100% 78%);
+  border: none;
+  padding: 5px 20px;
+  border-radius: 5px;
+  color: white;
+  box-shadow: 4px 4px 20px 4px rgb(0 0 0 / 49%);
+  /* display: none; */
+}
+
+.selectLoc {
+  margin-top: 40px;
+  display: none;
+}
+
+/*
+.loc {
+  display: none;
+}
+
+.locc {
+  display: none;
+} */
