still working on booking page

--- a/style.css
+++ b/style.css
@@ -512,3 +512,13 @@ footer {
 .locc {
   display: none;
 } */
+
+/* playing with the dispays  */
+
+/* #calConMain {
+  display: none;
+} */
+
+/* #calConMain2 {
+  display: none;
+} */
